--- a/menu.css
+++ b/menu.css
@@ -8,6 +8,7 @@
 header {
     background-color: blueviolet;
     height: 6rem;
+    width: 100rem;
 }
 .logo {
     display: flex;
@@ -73,4 +74,5 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100rem;
 }
