--- a/menu.css
+++ b/menu.css
@@ -11,7 +11,6 @@ header {
 }
 .logo {
     display: flex;
-    /* gap: 2rem; */
     align-items: center;
 }
 .logo img {
@@ -49,22 +48,30 @@ header {
     cursor: pointer;
     border: 2px solid blanchedalmond;
 }
-.card h2 {
+.cart h2 {
     text-align: center;
     margin: 30px 0px;
 }
-.card-items{
+.cart-items{
     margin: 60px;
     display: flex;
     flex-wrap: wrap;
     gap: 6rem;
 }
-.card-item:hover {
-    border: 4px solid blanchedalmond;
-}
 .lines {
     color: black;
     text-align: center;
+}
+.cart-item button {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+}
+.cart-item button:hover {
+    background-color: darkred;
 }
 footer {
     background-color: blueviolet;
